# kuBig2025

./: .gitignore  CMakeLists.txt  README.md  clean.sh  environment.yml  final_submission_clean.csv  move_selected_files.sh
atmega128_me/: ch1_1_led.c  ch1_2_led2.c  ch1_3_led3.c  ch1_4_led4.c
c_example/: a.out  celsius2fahr.c  charNumber  charNumber.c  compare.c  fahr2celsius  fourBit  limit  limit.c  makefile  sizeof  test  triangle  triangle2.c  variantSizeArray  variantSizeArray.c  variantSizeArray2  variantSizeArray2.c
c_example/project_bowling/: CMakeLists.txt  bowling.c  bowlingGame.c
cpp/: swap.cpp
docker_test/: docker_histroy.txt
ds/: generic  generic.c  strcpy  strcpy.c
ml_dl_python/: a01_jupyter.ipynb  a02_fish.ipynb  a03_numpy.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a06_regression.ipynb  a07_lienar_reg.ipynb  a08_polynomial_reg.ipynb  a09_calssification.ipynb  a10_batch_slope.ipynb  a11_decision_tree.ipynb  a12_cross_validation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a15_pandas.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a19_logistic_mnist.ipynb  house_price.ipynb  s14_titanic.ipynb
network/: CMakeLists.txt  hello_client.c  hello_server.c  shm_client.c  shm_semaphore2.c
orange33/: basket_data  bts-word.ows  corelation.py  healthcare.ows  heart_tree  housesales.ows  kmeans.ows  orange-script02.py  stop_words.txt  untitled.ows
pointer/: a.out  ex1.c  linkedList.c  list.c  testlist
python/: a01.py  a02_keyword.py  a04_print.py  a09_operator.py  a10_input.py  a16_datetime2.py  a19_range_enumerate.py  a21_cPython_import.py  a26_list_comprehension.py  a30_keyword_argument.py  a31_return_value.py  a32_fibonacci.py  a41_generator.py  a47_module.py  a49_random2.py  a51_os.py  a52_url.py  dlMain.c  example1.py  example2.py  example3.py  plugin.c  pythonInterpreter  pythonInterpreter.c  pythonInterpreter2  pythonInterpreter2.c  setup.py
sqlQuery/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  bookSql  bookSql copy.c  cmake_install.cmake  (+3 more)
(+445 files in other folders)
